Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domgross is the outcome variable"
+    "# domgross is the outcome variable\n",
+    "from sklearn.train_test_split import tr"
    ]
   },
   {
