Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    ],
    "source": [
     "# domgross is the outcome variable\n",
-    "from sklearn.train_test_split import train_test_split"
+    "from sklearn.model_selec import train_test_split"
    ]
   },
   {
