--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X_train,"
+    "X_train,X_test,y_train,y_test = train_tes"
    ]
   },
   {
