Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,12 +306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X_train,X_test,y_train,y_test = train_test_split(pd_df)"
+    "X_train,X_test,y_train,y_test = train_test_split(pd_df,target)"
    ]
   },
   {
