Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from sklearn.ensemble import random\n",
     "#Your code "
    ]
   },
