--- a/index.ipynb
+++ b/index.ipynb
@@ -323,11 +323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "rfr\n",
     "#Your code "
    ]
   },
