Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rfr\n",
+    "rfr = RandomForestRegressor()\n",
     "#Your code "
    ]
   },
