Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,8 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rfr = RandomForestRegressor()\n",
+    "rfr = RandomForestRegressor().fit(X_train,)\n",
+    "\n",
     "#Your code "
    ]
   },
