--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rfr = RandomForestRegressor().fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators = 100).fit(X_train,y_train)\n",
     "\n",
     "#Your code "
    ]
