--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "rfr = RandomForestRegressor(n_estimators = 100).fit(X_train,y_train)\n",
-    "\n",
+    "rfr.score(X_tra)\n",
     "#Your code "
    ]
   },
