--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rfr = RandomForestRegressor(n_estimators = 100).fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators = 100,max_d).fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n",
     "#Your code "
    ]
