Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +337,17 @@
     {
      "data": {
       "text/plain": [
-       "0.8698396313296592"
+       "0.8719965578070259"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "rfr = RandomForestRegressor(n_estimators = 100,max_d).fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators = 100,max_depth=4).fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n",
     "#Your code "
    ]
