Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -337,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "0.8719965578070259"
+       "-3.9873547083686462"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=4).fit(X_train,y_train)\n",
-    "rfr.score(X_train,y_train)\n",
+    "rfr.score(X_test,y_test)\n",
     "#Your code "
    ]
   },
