--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=4).fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n",
-    "#Your code "
+    "#Your code \n",
+    "rfr.predict()"
    ]
   },
   {
