Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,10 +337,11 @@
     {
      "data": {
       "text/plain": [
-       "-4.895329539414492"
+       "array([1.59612047e+08, 1.88677208e+08, 1.16451949e+08, 3.23416898e+07,\n",
+       "       2.72223879e+08, 4.46484582e+07, 2.07804748e+08, 4.11081971e+07])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +351,7 @@
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=4).fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n",
     "#Your code \n",
-    "rfr.predict()"
+    "rfr.predict(X_test)"
    ]
   },
   {
