Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -336,78 +336,12 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>domgross</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>61737191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>148430908</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13414714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>54239856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>93050117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>33345833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>53107035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>18007317</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     domgross\n",
-       "20   61737191\n",
-       "10  148430908\n",
-       "1    13414714\n",
-       "24   54239856\n",
-       "19   93050117\n",
-       "13   33345833\n",
-       "2    53107035\n",
-       "8    18007317"
+       "array([1.60405503e+08, 2.08339937e+08, 1.37525997e+08, 3.57583097e+07,\n",
+       "       2.77151671e+08, 4.20439737e+07, 1.94568355e+08, 4.79706500e+07])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,10 +349,9 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=4).fit(X_train,y_train)\n",
-    "rfr.score(X_test,y_test)\n",
+    "rfr.score(rfr.predict(X_test,y_test)\n",
     "#Your code \n",
-    "rfr.predict(X_test)\n",
-    "y_test"
+    "rfr.predict(X_test)"
    ]
   },
   {
