Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -382,6 +382,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "plt.scatter\n",
     "# your code here"
    ]
   },
