--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.scatter\n",
+    "plt.scatter()\n",
     "# your code here"
    ]
   },
