--- a/index.ipynb
+++ b/index.ipynb
@@ -323,32 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8220110208901608"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=2).fit(X_train,y_train)\n",
-    "rfr.score(X_train,y_train)\n"
+    "rfr.score(X_train,y_train)\n",
+    "rfr.coeffs_"
    ]
   },
   {
