--- a/index.ipynb
+++ b/index.ipynb
@@ -348,6 +348,7 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linearmodel import \n",
     "rfr = RandomForestRegressor(n_estimators = 100,max_depth=2).fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n",
     "rfr.coef_"
