Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.scatter(rfr.predict(X_test),y_test)\n",
+    "plt.scatter(rfr.predict(X_test),rfr.predict(X_test))\n",
     "plt.plot(y_train, y_train, label='Actual Data')\n",
     "# your code here"
    ]
