--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "plt.scatter(y_train,rfr.predict(X_train))\n",
+    "plt.plot(y_train, y_train, label='Actual Data')"
    ]
   },
   {
