Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "plt.scatter(y_train,rfr.predict(X_train))\n",
-    "plt.plot(y_train, y_train, label='Actual Data')"
+    "plt.plot(y_test, y_test, label='Actual Data')"
    ]
   },
   {
