--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "rfr = RandomForestRegressor().fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estima).fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n"
    ]
   },
