Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,11 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.964283139423906"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rfr.sco"
+    "rfr.score(X_test,y_test)"
    ]
   },
   {
