--- a/index.ipynb
+++ b/index.ipynb
@@ -374,11 +374,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.476082</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.157175</td>\n",
+       "      <td>0.901235</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>0.741156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.182956</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0.052392</td>\n",
+       "      <td>0.802469</td>\n",
+       "      <td>0.593750</td>\n",
+       "      <td>0.260341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.521640</td>\n",
+       "      <td>0.814815</td>\n",
+       "      <td>0.635417</td>\n",
+       "      <td>0.703467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.056948</td>\n",
+       "      <td>0.901235</td>\n",
+       "      <td>0.812500</td>\n",
+       "      <td>0.318099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.066059</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.034169</td>\n",
+       "      <td>0.703704</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.056883</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      budget  imdbRating  Metascore  imdbVotes\n",
+       "20  0.476082    0.000000   0.000000   0.000000\n",
+       "10  0.157175    0.901235   0.937500   0.741156\n",
+       "1   0.182956    0.000000   0.000000   0.000000\n",
+       "24  0.052392    0.802469   0.593750   0.260341\n",
+       "19  0.521640    0.814815   0.635417   0.703467\n",
+       "13  0.056948    0.901235   0.812500   0.318099\n",
+       "2   0.066059    1.000000   1.000000   1.000000\n",
+       "8   0.034169    0.703704   0.500000   0.056883"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X-"
+    "X_test"
    ]
   },
   {
