Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,22 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-4.152552540296499"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.57610829e+08 1.77415745e+08 1.30699616e+08 4.25901949e+07\n",
+      " 2.43544663e+08 5.34140082e+07 2.03396289e+08 4.45701378e+07]\n"
+     ]
     }
    ],
    "source": [
-    "rfr.predict(X_te)"
+    "print(rfr.predict(X_test))"
    ]
   },
   {
