--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -362,12 +362,22 @@
      "output_type": "stream",
      "text": [
       "[1.57610829e+08 1.77415745e+08 1.30699616e+08 4.25901949e+07\n",
-      " 2.43544663e+08 5.34140082e+07 2.03396289e+08 4.45701378e+07]\n"
+      " 2.43544663e+08 5.34140082e+07 2.03396289e+08 4.45701378e+07]\n",
+      "     domgross\n",
+      "20   61737191\n",
+      "10  148430908\n",
+      "1    13414714\n",
+      "24   54239856\n",
+      "19   93050117\n",
+      "13   33345833\n",
+      "2    53107035\n",
+      "8    18007317\n"
      ]
     }
    ],
    "source": [
-    "print(rfr.predict(X_test))"
+    "print(rfr.predict(X_test))\n",
+    "print(y_test)"
    ]
   },
   {
