Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -331,16 +331,18 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/utils/validation.py:761: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
+      "  y = column_or_1d(y, warn=True)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-0.11987695486611294"
+       "-0.11987696129687264"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +351,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
     "from sklearn.svm import SVR\n",
-    "rfr = SVR(kernel='linear').fit(X_train,y_train)\n",
+    "rfr = SVR(kernel='poly').fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n"
    ]
   },
