Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
     "from sklearn.svm import SVR\n",
-    "rfr = SVR(kernel='poly').fit(X_train,y_train)\n",
+    "rfr = SVR(kernel='sigmoid').fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n"
    ]
   },
