Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -339,10 +339,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.11987696129687264"
+       "-0.11987696115657177"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,22 +350,21 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "from sklearn.svm import SVR\n",
     "rfr = SVR(kernel='sigmoid').fit(X_train,y_train)\n",
     "rfr.score(X_train,y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[58767537.65495936 58767537.10157302 58767536.95853355 58767536.28910346\n",
-      " 58767537.91324288 58767536.33528196 58767537.09735969 58767536.08632038]\n",
+      "[58767537.17645973 58767536.97570164 58767537.00247781 58767536.82397784\n",
+      " 58767537.17484148 58767536.82597368 58767536.95069442 58767536.78167366]\n",
       "     domgross\n",
       "20   61737191\n",
       "10  148430908\n",
@@ -408,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f36bf408278>]"
+       "[<matplotlib.lines.Line2D at 0x7f36bf36cef0>]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
