Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4771810202933412"
+       "-4.774677384974766"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
     "rfr = LinearRegression().fit(X_train,y_train)\n",
-    "rfr.score(X_train,y_train)\n"
+    "rfr.score(X_test,y_test)\n"
    ]
   },
   {
