Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,15 +323,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
@@ -339,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.782481269536238"
+       "-4.977325971487853"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +348,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "rfr = RandomForestRegressor().fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators=10).fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n"
    ]
   },
