--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -337,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "-4.7207237151706405"
+       "-14.858369550761244"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "rfr = RandomForestRegressor(n_estimators=100,max_depth = 2).fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators=1,max_depth = ).fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n"
    ]
   },
