--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -337,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.2684750090422934"
+       "-4.190874028393074"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,21 +348,21 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "rfr = RandomForestRegressor(n_estimators=1).fit(X_train,y_train)\n",
+    "rfr = RandomForestRegressor(n_estimators=100,max_depth=2).fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6.73491980e+07 3.52666190e+07 6.73491980e+07 2.44777040e+07\n",
-      " 1.07518682e+08 3.73048740e+07 3.73048740e+07 4.16749300e+06]\n",
+      "[1.39262150e+08 1.88650388e+08 1.16629534e+08 4.15791069e+07\n",
+      " 2.56023026e+08 4.63398207e+07 2.10954245e+08 4.45337299e+07]\n",
       "     domgross\n",
       "20   61737191\n",
       "10  148430908\n",
