Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4         62      74170  4.151958e+07  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,13 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/preprocessing/data.py:323: DataConversionWarning: Data with input dtype int64 were all converted to float64 by MinMaxScaler.\n",
+      "  return self.partial_fit(X, y)\n",
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/preprocessing/data.py:323: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by MinMaxScaler.\n",
       "  return self.partial_fit(X, y)\n"
      ]
@@ -271,7 +273,7 @@
        "4  0.157175    0.925926   0.645833   0.137984"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +282,7 @@
     "# Only keep four predictors and transform the with MinMaxScaler\n",
     "\n",
     "scale = MinMaxScaler()\n",
-    "target = scale.fit_transformdf[['domgross']]\n",
+    "target = scale.fit_transform(df[['domgross']])\n",
     "df = df[[ \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
     "transformed = scale.fit_transform(df)\n",
     "pd_df = pd.DataFrame(transformed, columns = df.columns)\n",
