Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
    "source": [
     "import numpy as np\n",
     "def bias(y, y_hat):\n",
-    "    np.mean"
+    "    np.mean(y_hat-y)"
    ]
   },
   {
