--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    np.mean(y_hat**2) - np.mean(y_hat)"
+    "    np.mean(y_hat**2) - np.mean(y_hat)**2"
    ]
   },
   {
