Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -519,12 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    np.mean(i**2 for ) - np.mean(y_hat)**2"
+    "    np.mean(i**2 for i in y_hat) - np.mean(y_hat)**2"
    ]
   },
   {
