--- a/index.ipynb
+++ b/index.ipynb
@@ -500,13 +500,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "def bias(y, y_hat):\n",
-    "    np.mean(y_hat-y)"
+    "    return np.mean(y_hat-y)"
    ]
   },
   {
@@ -519,12 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    np.mean([i**2 for i in y_hat]) - np.mean(y_hat)**2"
+    "    return np.mean([i**2 for i in y_hat]) - np.mean(y_hat)**2"
    ]
   },
   {
