--- a/index.ipynb
+++ b/index.ipynb
@@ -541,7 +541,7 @@
    "outputs": [],
    "source": [
     "# code for train set bias and variance\n",
-    "bias()"
+    "bias(y_train,rfr.pr)"
    ]
   },
   {
