Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -368,20 +368,34 @@
       " 4.71305360e+07 5.21429663e+07 1.48430431e+08 6.84960914e+07\n",
       " 1.16436419e+08 3.45908682e+07]\n",
       "     domgross\n",
-      "28   46000903\n",
-      "13   33345833\n",
-      "5    38362475\n",
-      "29    4167493\n",
-      "18   24477704\n",
-      "25  238679850\n",
-      "16  119640264\n",
-      "1    13414714\n"
+      "10  148430908\n",
+      "3    75612460\n",
+      "6    67349198\n",
+      "23   25213103\n",
+      "11   37304874\n",
+      "14  107136417\n",
+      "21  107518682\n",
+      "4    95020213\n",
+      "12   19452138\n",
+      "26  393050114\n",
+      "0    25682380\n",
+      "17  368065385\n",
+      "8    18007317\n",
+      "9    60522097\n",
+      "2    53107035\n",
+      "15   35266619\n",
+      "24   54239856\n",
+      "22   57012977\n",
+      "19   93050117\n",
+      "20   61737191\n",
+      "27  122523060\n",
+      "7    15323921\n"
      ]
     }
    ],
    "source": [
     "print(rfr.predict(X_train))\n",
-    "print(y_test)"
+    "print(y_train)"
    ]
   },
   {
