Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -555,7 +555,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for test set bias and variance"
+    "# code for test set bias and variance\n",
+    "v"
    ]
   },
   {
